--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "license": "ISC",
   "author": "Maksim Avilov",
   "type": "module",
-  "main": "src/index.ts",
+  "main": "src/index.js",
   "scripts": {
-    "develop": "tsx watch src/index.ts",
-    "test": "test"
+    "develop": "tsx watch src/index.js",
+    "test": "node --test tests/**/*.test.js"
   },
   "dependencies": {
     "@langchain/core": "^1.0.4",
